<resources>
    <string name="app_name">EasyEdu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teacher">Giáo viên</string>
    <string name="parent">Phụ huynh</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="connectWithGoogle">Liên kết với Google</string>
    <string name="disConnectWithGoogle">Huỷ Liên kết với Google</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="or">hoặc</string>
    <string name="phone_nubmer">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="oldPassword">Mật Khẩu Cũ</string>
    <string name="newPassword">Mật Khẩu Mới</string>
    <string name="full_name">Họ và tên</string>
    <string name="repassword">Xác nhận mật khẩu</string>
    <string name="submit">Xác nhận</string>
    <string name="notification">Thông báo</string>
    <string name="close">Đóng</string>
    <string name="permission_noti_1">Ứng dụng chưa được cấp quyền, các chức năng có thể sẽ không hoạt động bình thường</string>
    <string name="grant">Cấp quyền</string>
    <string name="permission_request">Vui lòng cấp quyền truy cập bộ nhớ để tiếp tục</string>
    <string name="go_to">Đi đến</string>
    <string name="channel_name">Phản hồi</string>
    <string name="channel_description">Phản hồi của giáo viên gửi cho phụ huynh</string>
    <string name="default_notification_channel_id">teacher_feedback</string>
    <string name="server_connect_error">Không thể kết nối tới máy chủ!</string>
</resources>