<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".fragments.auth.ChooseActionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_corner_bottom_left_right"
            android:elevation="10dp"
            android:orientation="vertical"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/role_2" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_no_background" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Chào mừng bạn đã đến với EasyEdu!"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_choose_action_register"
                style="@style/NormalButton"
                android:text="@string/register" />

            <Button
                android:id="@+id/btn_choose_action_login"
                style="@style/OutlineButton"
                android:layout_marginTop="16dp"
                android:text="@string/login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_choose_action_login_google"
                style="@style/GoogleButton"
                android:text="@string/login_with_google" />

        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>