<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.teacher.AccountInfoFragment"
    android:background="@color/bg_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?android:actionBarSize"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_acc_info_old_pass"
                style="@style/EditText"
                android:hint="@string/oldPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_login_password1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_acc_info_new_pass"
                style="@style/EditText"
                android:hint="@string/newPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_login_password2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginVertical="16dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_acc_info_re_new_pass"
                style="@style/EditText"
                android:hint="@string/repassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_toolbar"
        android:elevation="20dp">

        <ImageView
            android:id="@+id/img_acc_info_back"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="12dp"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/tv_create_class_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đổi mật khẩu"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/blue_primary"/>

        <Button
            android:id="@+id/btn_acc_info_save"
            style="@style/ToolbarButton"
            android:text="Cập nhật"
            android:layout_gravity="end"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="16dp"
            android:paddingHorizontal="16dp"
            android:enabled="false"
            android:layout_width="99dp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

</FrameLayout>